User Page: Fix overflow issue on username

--- a/github-dark.css
+++ b/github-dark.css
@@ -257,12 +257,6 @@
     background: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSI1MTIiIGhlaWdodD0iNTEyIj48Zz48cmVjdCBoZWlnaHQ9IjUxMiIgd2lkdGg9IjUxMiIgeT0iMCIgeD0iMCIgZmlsbD0iIzAwMDAwMCIvPjxjaXJjbGUgY3g9IjI1NiIgY3k9IjI1NiIgcj0iMTkyIiBmaWxsPSIjZGRkZGRkIi8+PC9nPjwvc3ZnPg==") !important;
     background-size: cover !important;
   }
-  .vcard-fullname, .vcard-username {
-    overflow-y: hidden !important;
-  }
-  .scrollable-diagram {
-    overflow-x: hidden !important;
-  }
   code {
     overflow: visible !important;
   }
